compiler/testData/diagnostics/tests/subtyping/memberAnonymousObjects.fir.kt
// IGNORE_REVERSED_RESOLVE
class Test {
    private var x = object {};
    init {
        x = <!ASSIGNMENT_TYPE_MISMATCH!>object<!> {}
    }
}